add seed fit gym

--- a/notebooks/minExampleCartPole.ipynb
+++ b/notebooks/minExampleCartPole.ipynb
@@ -190,6 +190,7 @@
         "        maxSteps=500,\n",
         "        maxConsecutiveP=10,\n",
         "        worstFitness=0\n",
+        "        seed=42+g\n",
         "    )\n",
         "    # Selection\n",
         "    pop.tournamentSelection(\n",
