change layout to force_atlas_2based in cartpole

--- a/examples/example_CartPole.ipynb
+++ b/examples/example_CartPole.ipynb
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -668,6 +668,15 @@
        "    },\n",
        "    \"physics\": {\n",
        "        \"enabled\": true,\n",
+       "        \"forceAtlas2Based\": {\n",
+       "            \"avoidOverlap\": 0,\n",
+       "            \"centralGravity\": 0.01,\n",
+       "            \"damping\": 0.4,\n",
+       "            \"gravitationalConstant\": -50,\n",
+       "            \"springConstant\": 0.08,\n",
+       "            \"springLength\": 100\n",
+       "        },\n",
+       "        \"solver\": \"forceAtlas2Based\",\n",
        "        \"stabilization\": {\n",
        "            \"enabled\": true,\n",
        "            \"fit\": true,\n",
@@ -706,13 +715,14 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "net = Network(notebook=True, directed=True, cdn_resources=\"in_line\")\n",
+    "net.force_atlas_2based()\n",
     "individual = pop.individuals[-1]\n",
     "processingFunctionNames = [\"left\", \"right\"]\n",
     "judgmentFunctionNames = [\"Cart Position\", \"Cart Velocity\", \"Pole Angle\", \"Pole Angular Velocity\"]\n",
