--- a/examples/example_CartPole.ipynb
+++ b/examples/example_CartPole.ipynb
@@ -112,8 +112,8 @@
     "    ni=500,       # number of individuals\n",
     "    jn=1,         # judgment nodes\n",
     "    jnf=4,        # judgment node functions\n",
-    "    pn=2,         # perceptron nodes\n",
-    "    pnf=2,        # perceptron node functions\n",
+    "    pn=2,         # processing nodes\n",
+    "    pnf=2,        # processing node functions\n",
     "    fractalJudgment=False\n",
     ")"
    ]
@@ -746,9 +746,13 @@
     "    for idx, edge in enumerate(node.edges):\n",
     "        if node.type == \"J\":\n",
     "            edgeLabel = f\"{node.boundaries[idx]} bis {node.boundaries[idx+1]}\"\n",
+    "            net.add_edge(node.id, edge, title = edgeLabel,\n",
+    "                    font={'size': 14, 'color': '#3e6341', 'align': 'horizontal'})\n",
+    "        else:\n",
+    "            net.add_edge(node.id, edge,\n",
+    "                    font={'size': 14, 'color': '#372f61', 'align': 'horizontal'})\n",
     "        \n",
-    "        net.add_edge(node.id, edge, title = edgeLabel,\n",
-    "                    font={'size': 14, 'color': 'green', 'align': 'horizontal'})\n",
+    "        \n",
     "\n",
     "# adding start node edge \n",
     "net.add_edge(-1, individual.startNode.edges[0])\n",
