fix doi in paper.bib

--- a/paper.bib
+++ b/paper.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Fabian Köhnke at 2025-12-15 10:06:29 +0100 
+%% Created for Fabian Köhnke at 2025-12-15 10:14:01 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -39,8 +39,8 @@
 @inproceedings{Chen.2009II,
 	author = {Chen, Yan and Mabu, Shingo and Ohkawa, Etsushi and Hirasawa, Kotaro},
 	booktitle = {2009 IEEE Congress on Evolutionary Computation},
-	date-modified = {2025-12-15 10:06:26 +0100},
-	dio = {10.1109/CEC.2009.4983238},
+	date-modified = {2025-12-15 10:13:56 +0100},
+	doi = {10.1109/CEC.2009.4983238},
 	pages = {2379--2386},
 	title = {Constructing portfolio investment strategy based on time adapting genetic network programming},
 	year = {2009}}
